--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,10 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+.btn a {
+    text-decoration: none;
+}
+
 .btn:hover {
     background-color: var(--primary-color);
 }
